<resources>
    <string name="app_name">TradeMore</string>
    <string name="enterUserName">Enter User Name</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterMobileNumber">Enter Mobile Number</string>
    <string name="tradMore">TRADMORE</string>
    <string name="signup">SignUp</string>
    <string name="signIn">SignIn</string>
    <string name="don_t_have_account">Don\'t Have Account | \u0020</string>
    <string name="signUpNow">SignUp Now</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_UserHistory">User History</string>
    <string name="menu_Notification">Notification</string>
    <string name="menu_Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LogIn</string>
</resources>