<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shree.trademore.ui.home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user_history"
        android:name="com.shree.trademore.ui.home.ui.userhistory.UserHistoryFragment"
        android:label="@string/menu_UserHistory"
        tools:layout="@layout/fragment_user_history" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.shree.trademore.ui.home.ui.notification.NotificationFragment"
        android:label="@string/menu_Notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.shree.trademore.ui.home.ui.notification.NotificationFragment"
        android:label="@string/menu_Notification"
        tools:layout="@layout/fragment_notification" />

</navigation>